# Rendering-Lab-App

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
.zed/: debug.json
app/: CMakeLists.txt  README.md  main.cpp
buildscripts/: FindGLFW.cmake  FindGlad.cmake  FindSkia.cmake  GetDependencies.cmake  GetSystemDependencies.cmake  ModuleSetup.cmake
buildscripts/skia/: CopySkiaLibraryToInstallDir.cmake  FindSkiaSystem.cmake  SetupSkiaVariables.cmake
src/: CMakeLists.txt  ExampleCanvas.cpp  ExampleCanvas.h  GLUtil.cpp  GLUtil.h  GLWindow.cpp  GLWindow.h  ISkiaGLWindow.cpp  ISkiaGLWindow.h
